// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NewsListItem > should correspond default layout 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "addedAt" prop 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      addedAt
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "addedAt" prop 2`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      addedAt v2
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "headline" prop 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      headline
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "headline" prop 2`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      headline v2
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "id" prop 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/1"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "id" prop 2`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/2"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "image" prop 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="/"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "image" prop 2`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="Хотите первыми узнавать о новых фильмах и специальных показах? Подписывайтесь на наши VK и MAX!"
      class="_newsListItemImage_7dec2b"
      src="/v2"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "preview" prop 1`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="preview"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;

exports[`NewsListItem > should support the "preview" prop 2`] = `
<div>
  <div
    class="_newsListItem_7dec2b"
    data-test-id="news-list-item"
  >
    <a
      class="_newsListItemLink_7dec2b"
      data-discover="true"
      href="/news/11384"
    />
    <img
      alt="preview v2"
      class="_newsListItemImage_7dec2b"
      src="https://images.kinomax.ru/800/news/2025/10/161011_234470.webp"
    />
    <h3
      class="_newsListItemTitle_7dec2b"
    >
      Следите за важными анонсами в наших социальных сетях!
    </h3>
    <small
      class="_newsListItemDate_7dec2b"
    >
      2025-10-16 11:37:21
    </small>
  </div>
</div>
`;
